Added code for order service, valdiation, and added kafka library and tests to ensure it's working. Have not added kafka submission.